RESOLVED FIXED291231
[visionOS] External playback can get stuck in AcceleratedVideoMode::StagedVideoRenderer
https://bugs.webkit.org/show_bug.cgi?id=291231
Summary [visionOS] External playback can get stuck in AcceleratedVideoMode::StagedVid...
Ryan Fuller
Reported 2025-04-07 15:00:54 PDT
With commit 293272@main, we wait to set the isInFullscreenOrPiP state until we send the setVideoReceiverEndpoint message, counting that the videoTarget would be set before the isInFullscreenOrPiP message is received. However, because they use different paths to go from the UI to WebGPU process, the timing is inconsistent, so sometimes the order is received backwards. This results in the possibility for accelerated video mode to be stuck in StagedVideoRenderer.
Attachments
Ryan Fuller
Comment 1 2025-04-07 15:00:55 PDT
Ryan Fuller
Comment 2 2025-04-07 15:21:48 PDT
EWS
Comment 3 2025-04-10 13:03:47 PDT
Committed 293539@main (78ee70b1b6b8): <https://commits.webkit.org/293539@main> Reviewed commits have been landed. Closing PR #43768 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.