[visionOS] External playback can get stuck in AcceleratedVideoMode::StagedVideoRenderer https://bugs.webkit.org/show_bug.cgi?id=291231 rdar://148627593

Reviewed by Andy Estes.

With commit 293272@main, we wait to set the isInFullscreenOrPiP state until we
send the setVideoReceiverEndpoint message, counting that the videoTarget would
be set before the isInFullscreenOrPiP message is received. However, because
they use different paths to go from the UI to WebGPU process, the timing is
inconsistent, so sometimes the order is received backwards. This results in the
possibility for accelerated video mode to be stuck in StagedVideoRenderer.

To fix, move the second message that needs to be received after the first to
the handler of the XPC reply from the first message (setVideoReceiverEndpoint).

* Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.mm:
(WebKit::PlaybackSessionManagerProxy::setVideoReceiverEndpoint):

Canonical link: https://commits.webkit.org/293539@main